<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="VersionName">1.0</string>
    <string name="text_open">Open</string>
    <string name="text_close">Close</string>
    <string name="ApplicationName">Task3</string>
    <string name="age">Age:</string>
    <string name="e_mail">E-mail:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="about">About:</string>
    <string name="date_registered">Date registered:</string>
    <string name="name">Name:</string>
    <string name="loading">Please wait</string>
</resources>