<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/top_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".8">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/dark_title_color"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/name_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_title">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <View
                        android:id="@+id/circle"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:background="@drawable/circle_drawable" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/age_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_block"
                    android:layout_marginTop="12dp"
                    android:text="@string/age"
                    android:textColor="@color/dark_title_color"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/age_title"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/figure"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="end|center_vertical"
                android:layout_weight=".2" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_block"
            android:layout_gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_reg_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/date_registered"
                android:textColor="@color/dark_title_color"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_reg_title"
                android:ellipsize="end"
                android:lines="2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_reg"
                android:text="@string/e_mail"
                android:textColor="@color/dark_title_color"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_title"
                android:ellipsize="end"
                android:lines="2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/phone_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:text="@string/phone"
                android:textColor="@color/dark_title_color"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_title"
                android:ellipsize="end"
                android:lines="2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/address_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:text="@string/address"
                android:textColor="@color/dark_title_color"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_title"
                android:ellipsize="end"
                android:lines="2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/geo_coordinates_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:text="@string/coordinates"
                android:textColor="@color/dark_title_color"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/geo_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/geo_coordinates_title"
                android:ellipsize="end"
                android:lines="2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/geo_coordinates"
                android:text="@string/about"
                android:textColor="@color/dark_title_color"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_title"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_friend_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="14dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <MvxRecyclerView
                android:id="@+id/friend_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title_friend_list"
                android:background="@android:color/transparent" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
